--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My Portfolio</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -23,7 +23,7 @@
     </div>
     <div class="about-section">
         <h2>About me</h2>
-        <p>Currently, I live in Minnesota, USA. Am not hired but am an expertise in web development. I moved to the states 4 years ago to further my education. Now I have a major in web development and am looking forward to work with other developers. Below are some of the projects that I did.</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur consectetur odio, nulla sapiente iure inventore ducimus maiores, hic quidem, deserunt accusamus! Veniam, optio quae enim officiis dolores necessitatibus! Omnis, exercitationem.</p>
     </div>
 <!-- Project section -->
     <div class="projects">
@@ -55,7 +55,7 @@
             </div>
             <div class="text">
                 <label for="phone">Phone</label>
-                <input type="number" id="fname" name="firstname" placeholder="+123456789" required>
+                <input type="number" id="number" name="number" placeholder="+123456789" required>
             <div>
             <div class="text">
                 <label for="subject">Subject</label>
@@ -64,24 +64,19 @@
                 <input type="submit" value="Submit">
             </div>
         </form>
-        <!--  contact info -->
-        <div class="contact-info">
-            <div>
-                <h3>Contact info</h3>
-            </div>
-            <div>
-                <span></span>
-                <p>Rustic Place, Little Canada <br>Minnesota</p>
-            </div>
-            <div>
-                <span></span>
-                <a href="mailto:shirille21@gmail.com" target="-blank">shirille21@gmail.com</a>
-            </div>
-            <div>
-                <span></span>
-                <a href="tel:+17632971790" target="_blank">+17632971790</a>
-            </div>
         </div>
     </div>
+    <footer id="contact-info">
+            <h3>Contact info</h3>
+
+            <p>Rustic Place, Little Canada, Minnesota</p>
+            <div id="contact-info">
+            <a href="mailto:shirille21@gmail.com" target="-blank">shirille21@gmail.com</a>
+            </div>
+            <div>
+            <a href="tel:+17632971790" target="_blank">+17632971790</a>
+            </div>
+    </footer>
+
 </body>
 </html>
