--- a/index.html
+++ b/index.html
@@ -1,82 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-    <div id="header">
-        <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="about-section">About</a></li>
-                <li><a href="projects">Projects</a></li>
-                <li><a href="contact">Contact</a></li>
-            </ul>
-        </nav>
-    </div>
-    <div class="hero">
+    <main class="body">
+        <div id="header">
+            <nav>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#about-section">About</a></li>
+                    <li><a href="#projects">Projects</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+        <div id="hero">
             <h1>Am Nimo <span>Shirille</span></h1>
             <p>Am a web developer.</p>
-    </div>
-    <div class="about-section">
-        <h2>About me</h2>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur consectetur odio, nulla sapiente iure inventore ducimus maiores, hic quidem, deserunt accusamus! Veniam, optio quae enim officiis dolores necessitatibus! Omnis, exercitationem.</p>
-    </div>
-<!-- Project section -->
-    <div class="projects">
-        <h2>Projects</h2>
-    </div>
-    <div class="project">
-        <div class="image">
-            <a href="https://github.com/Nimo20/Mini-project-2.git" target="_blank"><img
-                    src="Images/img -3.png" alt=""></a>
         </div>
-        <div class="image">
-            <a href="https://github.com/Nimo20/Mini-project-01.git" target="_blank"><img src="Images/img.png" class="imsge-2"></a>
+        <div id="about-section">
+            <h2>About me</h2>
+            <p>Currently, I live in Minnesota, USA. Am not hired but am an expertise in web development. I moved to the
+                states 4 years ago to further my education. Now I have a major in web development and am looking forward
+                to work with other developers. Below are some of the projects that I did.</p>
         </div>
-    </div>
-<!-- Contact me section -->
-    <div class="contact">
-        <h2>Contact Me</h2>
-        <p>Leave me a massage.</p>
-    </div>
-    <div class="container">
-        <form class="info">
-            <div class="name">
-                <label for="firstname">First Name</label>
-                <input type="text" id="fname" name="firstname" placeholder="Your name.." required>
-            </div>
-            <div class="name">
-                <label for="lastname">Last Name</label>
-                <input type="text" id="lname" name="lastname" placeholder="Your last name.." required>
-            </div>
-            <div class="text">
-                <label for="phone">Phone</label>
-                <input type="number" id="number" name="number" placeholder="+123456789" required>
-            <div>
-            <div class="text">
-                <label for="subject">Subject</label>
-                <textarea id="subject" name="subject" placeholder="Write something.." style="height:170px"></textarea>
-            </div>
-                <input type="submit" value="Submit">
-            </div>
-        </form>
+        <!-- Project section -->
+        <div id="projects">
+            <h2>Projects</h2>
         </div>
-    </div>
-    <footer id="contact-info">
+        <div id="project">
+            <div class="image">
+                <a href="https://github.com/Nimo20/Mini-project-2.git" target="_blank"><img src="Images/img -3.png"
+                        alt=""></a>
+            </div>
+            <div class="image">
+                <a href="https://github.com/Nimo20/Mini-project-01.git" target="_blank"><img src="Images/img.png"
+                        class="imsge-2"></a>
+            </div>
+        </div>
+        <!-- Contact me section -->
+        <div id="contact">
+            <h2>Contact Me</h2>
+            <p>Leave me a massage.</p>
+        </div>
+        <div class="container">
+            <form class="info">
+                <div class="name">
+                    <label for="firstname">First Name</label>
+                    <input type="text" id="fname" name="firstname" placeholder="Your name.." required>
+                </div>
+                <div class="name">
+                    <label for="lastname">Last Name</label>
+                    <input type="text" id="lname" name="lastname" placeholder="Your last name.." required>
+                </div>
+                <div class="text">
+                    <label for="phone">Phone</label>
+                    <input type="number" id="number" name="number" placeholder="+123456789" required>
+                    <div>
+                        <div class="text">
+                            <label for="subject">Subject</label>
+                            <textarea id="subject" name="subject" placeholder="Write something.."
+                                style="height:170px"></textarea>
+                        </div>
+                        <input type="submit" value="Submit">
+                    </div>
+            </form>
+        </div>
+        </div>
+        <footer id="contact-info">
             <h3>Contact info</h3>
 
             <p>Rustic Place, Little Canada, Minnesota</p>
             <div id="contact-info">
-            <a href="mailto:shirille21@gmail.com" target="-blank">shirille21@gmail.com</a>
+                <a href="mailto:shirille21@gmail.com" target="-blank">shirille21@gmail.com</a>
             </div>
             <div>
-            <a href="tel:+17632971790" target="_blank">+17632971790</a>
+                <a href="tel:+17632971790" target="_blank">+17632971790</a>
             </div>
-    </footer>
-
+        </footer>
+    </main>
 </body>
+
 </html>
